vlib/v/checker/tests/void_function_assign_to_string.out
vlib/v/checker/tests/void_function_assign_to_string.v:6:6: error: cannot assign `void` to variable `a` of type `string`
    4 | fn main(){
    5 |     mut a := ''
    6 |     a = x(1,2) // hello
      |         ~~~~~~
    7 |     eprintln('a: $a')
    8 | }
