vlib/v/checker/tests/void_function_assign_to_string.vv
fn x(_ int, _ int) {

}
fn main(){
	mut a := ''
	a = x(1,2) // hello
	eprintln('a: $a')
}
